Add header to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -11,21 +11,54 @@
         <link rel="apple-touch-icon" href="icon.png">
         <!-- Place favicon.ico in the root directory -->
 
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="stylesheets/normalize.css">
+        <link rel="stylesheet" href="stylesheets/main.css">
     </head>
     <body>
+
+        <header>
+            <div class="wrapper">
+            <div class="headerlogo"><a href="index.html"><img src="images/Logo/LogoHorizontal.png"> </a></div>
+
+            <div class="headersearchbar">
+                <div>
+                    <input type="search" placeholder="Search stuff">
+                <button><img src="images/icons/search.png"></button>
+
+                </div>
+            </div>
+
+            <div class="headerbuttongroup">
+                <a href="login.html>"><button class="coloredbutton">Sign in</button></a>
+                <a href="register.html"><button>Register</button></a>
+
+                <a href=""cart.html><button class="cart"><img src="images/icons/shoppingcart.png"> </button></a>
+            </div>
+
+
+</div>
+        </header>
+
         <!--[if lte IE 9]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
         <![endif]-->
-
+<div class="wrapper">
+        <section></section>
         <!-- Add your site or application content here -->
         <p>Hello world! This is HTML5 Boilerplate.</p>
-        <script src="js/vendor/modernizr-3.5.0.min.js"></script>
+
+</div>
+            <footer>
+                <div class="wrapper">
+                </div>
+            </footer>
+
+
+        <script src="javascripts/vendor/modernizr-3.5.0.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+        <script>window.jQuery || document.write('<script src="javascripts/vendor/jquery-3.2.1.min.js"><\/script>')</script>
+        <script src="javascripts/plugins.js"></script>
+        <script src="javascripts/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
         <script>
