--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
+        <title>Home - Generic Games</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="manifest" href="site.webmanifest">
         <link rel="apple-touch-icon" href="icon.png">
         <!-- Place favicon.ico in the root directory -->
-
+        <link rel="stylesheet" href="stylesheets/skdslider.css">
         <link rel="stylesheet" href="stylesheets/normalize.css">
         <link rel="stylesheet" href="stylesheets/main.css">
     </head>
@@ -39,27 +39,63 @@
 </div>
         </header>
 
-        <!--[if lte IE 9]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-        <![endif]-->
+        <ul id="bannerslider" class="slides">
+            <li> <img src="images/slides/ee88a90dccea4d82b38bd08e7ed1d4f9.webp" />
+                <!--Slider Description example-->
+                <div class="slide-desc">
+                    <h2>Slider Title 1</h2>
+                    <p>Buy the game pls <a class="more" href="#">more</a></p>
+                </div>
+            </li>
+            <li><img src="images/slides/gaming-wallpapers-2.jpg" style="z-index: -1"/>
+                <div class="slide-desc">
+                    <h2>Slider Title 2</h2>
+                    <p>pls buy <a class="more" href="#">more</a></p>
+                </div>
+            </li>
+            <li><img src="images/slides/rainbow-clipart-wallpaper-9.jpg" style="z-index: -2"/>
+                <!--NO Description Here-->
+            </li>
+        </ul>
+
 <div class="wrapper">
         <section></section>
         <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <p>Insert shop here pls</p>
+    <p>Add Categories</p>
+    <p>Display products to the right?</p>
 
 </div>
             <footer>
                 <div class="wrapper">
+                    <img src="images/Logo/Logo.png">
+                    <p>
+                        © 2018 WebAppGenerics. Alla rättigheter förbehålls. Alla varumärken är egendom av sina respektiva ägare.
+                        Moms inräknat i alla priser där det är tillämpligt.</p>
                 </div>
+
             </footer>
 
 
         <script src="javascripts/vendor/modernizr-3.5.0.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
         <script>window.jQuery || document.write('<script src="javascripts/vendor/jquery-3.2.1.min.js"><\/script>')</script>
+
         <script src="javascripts/plugins.js"></script>
         <script src="javascripts/main.js"></script>
+        <script src="javascripts/skdslider.js"></script>
+        <script>
 
+
+            jQuery(document).ready(function(){
+
+                jQuery('#bannerslider').skdslider({delay:5000, animationSpeed: 1000,'pauseOnHover': true, showNextPrev:true,showPlayButton:false, showNav: true, autoSlide:false,animationType:'sliding'});
+
+
+
+            });
+
+        </script>
         <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
         <script>
             window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
